# herd

./: .bazelrc  .gitignore  .gitmodules  .mergify.yml  .travis.yml  ChangeLog.md  Makefile  README.md  WORKSPACE  package.yaml  packages_lts-12.26.bzl  stack.yaml  stylize.sh
.circleci/: config.yml
console/: .gitignore  BUILD.bazel  Main.elm  Makefile  elm.json  entry.js  package-lock.json  package.json  packages.dhall  spago.dhall
console/libs/elm-avro/: elm.json  package.json
console/libs/elm-avro/src/Avro/: Json.elm
console/src/: Avro.elm  Main.elm  Main.purs
console/src/Avro/: Json.elm  Types.elm
console/src/Avro/Types/: Value.elm
console/src/Data/Argonaut/: Generic.purs
console/src/Data/Avro/: Schema.purs  Types.purs
console/src/Extra/: Maybe.elm
console/src/Herd/: Avro.elm  Console.elm  Console.purs  Fetch.elm
console/src/Herd/Console/: Effect.purs  Model.elm  Page.elm  SchemaBrowser.elm  SchemaList.elm  Types.purs
console/src/Herd/Console/Component/: JsonTree.purs
console/src/Herd/Console/Data/: SchemaIndex.elm
console/src/Herd/Console/Page/: SchemaBrowser.elm  SchemaBrowser.purs
console/src/Herd/Console/Page/SchemaBrowser/: Editor.purs  List.purs
console/src/Herd/Console/Schema/: Editor.purs  List.purs
console/static/: app.css  index.html
console/test/: Main.purs
console/test/Test/Data/Avro/: Types.purs
console/tests/Avro/: JsonSpec.elm
protocol/: BUILD.bazel  package.yaml
protocol/src/Herd/: Protocol.hs  Types.hs
protocol/src/Herd/Data/: Text.hs
protocol/test/: Spec.hs
protocol/test/Test/Herd/: Types.hs
(+108 files in other folders)
